<<<<<<< Updated upstream
[gd_scene load_steps=7 format=3 uid="uid://vbfioqyrxy0v"]
=======
[gd_scene load_steps=12 format=3 uid="uid://vbfioqyrxy0v"]
>>>>>>> Stashed changes

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_hh7e3"]
[ext_resource type="Texture2D" uid="uid://yte6ya8icrxa" path="res://scenes/ui/ui_sprites/boxer.png" id="2_5f6gd"]
<<<<<<< Updated upstream
[ext_resource type="Script" path="res://online/usernameButton.gd" id="2_tgtpp"]
=======
[ext_resource type="PackedScene" uid="uid://bhhkgph4lwbem" path="res://online/Leaderboard.tscn" id="2_tilmi"]
[ext_resource type="Texture2D" uid="uid://t568mg8ro4h7" path="res://assets/crowd_left.png" id="3_dud0y"]
[ext_resource type="AudioStream" uid="uid://bnxvst4le33jd" path="res://sounds/music/boxing title.ogg" id="4_f6i68"]
[ext_resource type="Texture2D" uid="uid://c5l5gv1ptw3tt" path="res://assets/crowd_right.png" id="4_lnr45"]

[sub_resource type="LabelSettings" id="LabelSettings_743dm"]
line_spacing = -24.0
font_size = 140
>>>>>>> Stashed changes

[sub_resource type="FontVariation" id="FontVariation_6jksb"]
variation_embolden = -0.19

[sub_resource type="LabelSettings" id="LabelSettings_lybsi"]
font = SubResource("FontVariation_6jksb")
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_743dm"]
font_size = 140

[node name="MainMenu" type="Control" node_paths=PackedStringArray("username_label", "highscore_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hh7e3")
leaderboard_scene = ExtResource("2_tilmi")
username_label = NodePath("Home/HBoxContainer/Online/UsernameLabel")
highscore_label = NodePath("Play/HighscoreLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

<<<<<<< Updated upstream
[node name="Championship" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
=======
[node name="Online" type="VBoxContainer" parent="Home/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="Home/HBoxContainer/Online"]
layout_mode = 2
text = "NyaNya!"
label_settings = SubResource("LabelSettings_lybsi")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Leaderboard" type="Button" parent="Home/HBoxContainer/Online"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Leaderboard"
text_overrun_behavior = 1

[node name="ChangeName" type="Button" parent="Home/HBoxContainer/Online"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Change Name"
text_overrun_behavior = 1

[node name="Logout" type="Button" parent="Home/HBoxContainer/Online"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Logout"
text_overrun_behavior = 1

[node name="Play" type="Button" parent="Home/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="VBoxContainer" type="VBoxContainer" parent="Home/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Options" type="Button" parent="Home/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Exit" type="Button" parent="Home/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="Play" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Play"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -225.0
offset_right = 462.0
offset_bottom = 225.0
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Championship" type="Button" parent="Play/VBoxContainer"]
custom_minimum_size = Vector2(350, 200)
>>>>>>> Stashed changes
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Championship"

[node name="Versus" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Versus"

[node name="Training" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Training"

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="OnlinePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel"]
layout_mode = 2

<<<<<<< Updated upstream
[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer"]
layout_mode = 2
text = "Online Account"
label_settings = SubResource("LabelSettings_lybsi")
=======
[node name="HighscoreLabel" type="Label" parent="Play"]
offset_left = 106.0
offset_top = 222.0
offset_right = 468.0
offset_bottom = 272.0
text = "HIGH SCORE: 0"
label_settings = SubResource("LabelSettings_pcx1d")
>>>>>>> Stashed changes
horizontal_alignment = 1

[node name="Leaderboard" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Leaderboard"

[node name="Change Username" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Change Username: NyaNya!"
script = ExtResource("2_tgtpp")

[node name="Logout" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Logout"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
text = "BOXING"
label_settings = SubResource("LabelSettings_743dm")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 450.55)
layout_mode = 2
texture = ExtResource("2_5f6gd")
expand_mode = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Championship" to="." method="_on_championship_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Versus" to="." method="_on_versus_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer/Change Username" to="." method="_on_change_username_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OnlinePanel/VBoxContainer/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
